# lifelong-ops-agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  OPENENV_COMPLIANCE.md  QUICKSTART.md  README.md  SHIP.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements-hf.txt  requirements.txt  run_tests.py  server.py
baseline/: llm_client.py  memory_agent.py  stateless.py
env/: __init__.py  grader.py  kb.py  memory.py  tasks.py  world.py
eval/: lifelong_eval.py  submission_log.py
server/: __init__.py  app.py
server/static/: index.html
